src/test/deca/syntax/valid/instanceof_class_01.deca
// Description:
//    Programme testant la fonction instanceof.
//
// Resultats:
//
//
//
// Historique:
//    cree le 13/01/2023

class A {
    int x;
}

{
    A a = new A();
    a instanceof A;
}