src/test/deca/syntax/invalid/class_obj_01.deca
// Description:
//    Programme testant l'isntanciation d'un objet;
//
// Resultats:
//      Erreur
//
//
// Historique:
//    cree le 16/01/2023

class A {
    int x(int j) {
	}
}
{
	A a = new A(;
}